cleaning up some views + more details in yaml
